Fixed text overlaping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,16 +20,23 @@ body {
     font-family: "Harry Plotter";
   }
 
-  #welcomeContainer, #qus1, #qus2, #qus3, #qus4, #qus5, #qus6, #qus7, #qus8, #qus9, #qus10 {
+  #welcomeContainer{
     position: absolute;
-    top: 40%;
+    top: 30%;
+    left:50%;
+    transform: translate(-50%,-50%);
+  }
+
+ #qus1, #qus2, #qus3, #qus4, #qus5, #qus6, #qus7, #qus8, #qus9, #qus10 {
+    position: absolute;
+    top: 50%;
     left:50%;
     transform: translate(-50%,-50%);
   }
 
   #resultContainer {
     position: absolute;
-    top: 48%;
+    top: 50%;
     left:50%;
     transform: translate(-50%,-50%);
   }
@@ -56,3 +63,29 @@ body {
     position: fixed;
 } */
   
+/*
+  These rules take effect when the browser's width
+  is either 768px or less.
+*/
+
+/* @media only screen and (max-width: 980px) {
+    
+  #timerDiv,#resultContainer {
+ 
+} */
+  
+  }
+  
+@media only screen and (max-width: 768px) {
+  #timerDiv,#resultContainer {
+  width: 33%;
+}
+  
+  }
+ 
+@media only screen and (max-width: 640px) {
+
+  #timerDiv,#resultContainer {
+  width: 33%;
+}
+}
